# hello-askama

./: .gitignore  Cargo.toml  README.md  askama.toml  build.rs  package.json
assets/css/: app.css
assets/templates/: base.html
assets/templates/errors/: content.html
assets/templates/pages/: about.html  blog.html  contact.html  index.html  projects.html  qrcode.html
assets/templates/partials/: nav.html  qrcode.html
src/: config.rs  error.rs  main.rs  shutdown.rs
src/routes/pages/: about.rs  blog.rs  contact.rs  index.rs  mod.rs  projects.rs  qrcode.rs
src/ui/components/: mod.rs  nav.rs  qrcode.rs
src/ui/layout/: base.rs  mod.rs  render.rs  stack.rs
