[package]
name = "hello-askama"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
axum = { version = "0.8.8", features = ["macros"] }
axum-typed-routing = "0.4.0"
clap = { version = "4.5.60", features = ["derive", "env"] }
num_cpus = "1.17.0"
tokio = { version = "1.50.0", features = [
	"rt-multi-thread",
	"signal",
	"tracing",
] }
tower-http = { version = "0.6", features = ["trace", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
	"env-filter",
	"fmt",
	"registry",
] }
